--- a/index.html
+++ b/index.html
@@ -2,93 +2,71 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Encuéntrame en esta carta</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Encuéntrame en esta carta si sientes que no te amo</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      text-align: center;
-      background-image: url("fondo.jpg");
+      margin: 0;
+      padding: 0;
+      background-image: url('fondo.jpg');
       background-size: cover;
       background-position: center;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      color: #fff;
-      padding: 50px;
-      min-height: 100vh;
-    }
-
-    h1 {
-      font-size: 2em;
-      margin-bottom: 40px;
-      background: rgba(0, 0, 0, 0.4);
-      display: inline-block;
-      padding: 10px 20px;
-      border-radius: 12px;
-    }
-
-    .button-container {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      flex-wrap: wrap;
-    }
-
-    .love-button {
-      background-color: #ff69b4;
-      border: none;
+      font-family: Arial, sans-serif;
+      text-align: center;
       color: white;
+    }
+    .container {
+      margin-top: 20%;
+    }
+    button {
+      background-color: pink;
+      border: none;
       padding: 15px 25px;
-      font-size: 16px;
+      margin: 10px;
+      font-size: 18px;
       border-radius: 10px;
       cursor: pointer;
-      transition: background-color 0.3s;
     }
-
-    .love-button:hover {
-      background-color: #ff1493;
-    }
-
-    .message {
-      margin-top: 30px;
-      font-size: 1.3em;
+    #mensaje {
+      margin-top: 20px;
+      font-size: 20px;
       font-weight: bold;
-      background: rgba(0, 0, 0, 0.4);
-      padding: 15px 20px;
-      border-radius: 10px;
+      background-color: rgba(255, 255, 255, 0.7);
+      color: black;
+      padding: 10px;
       display: inline-block;
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
-
-  <h1>Encuéntrame en esta carta si sientes que no te amo</h1>
-
-  <div class="button-container">
-    <button class="love-button" onclick="showMessage(1)">Si crees que no te amo oprime este botón</button>
-    <button class="love-button" onclick="showMessage(2)">Si crees que te amo oprime este botón</button>
-  </div>
-
-  <div id="message" class="message" style="display: none;"></div>
-
-  <!-- Música de fondo -->
-  <audio autoplay loop hidden>
+  <audio id="audio" loop>
     <source src="media-luna.mp3" type="audio/mpeg">
     Tu navegador no soporta el audio HTML5.
   </audio>
 
+  <div class="container">
+    <h1>Encuéntrame en esta carta si sientes que no te amo</h1>
+    <button onclick="mostrarMensaje1()">Si crees que no te amo, oprime este botón</button>
+    <button onclick="mostrarMensaje2()">Si crees que te amo, oprime este botón</button>
+    <div id="mensaje"></div>
+  </div>
+
   <script>
-    function showMessage(option) {
-      const messageDiv = document.getElementById("message");
-      if (option === 1) {
-        messageDiv.textContent = "Tonta, sabes que te equivocaste, ve a la opción 2";
-      } else {
-        messageDiv.textContent = "Cantares 2:2";
-      }
-      messageDiv.style.display = "block";
+    function reproducir() {
+      document.getElementById("audio").play();
+    }
+
+    function mostrarMensaje1() {
+      reproducir();
+      document.getElementById('mensaje').innerText = "Tonta, sabes que te equivocaste, ve a la opción 2";
+    }
+
+    function mostrarMensaje2() {
+      reproducir();
+      document.getElementById('mensaje').innerText = "Cantares 2:2";
     }
   </script>
-
 </body>
 </html>
