--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </audio>
 
   <div class="container">
-    <h1>Encuéntrame en esta carta si sientes que no te amo</h1>
+    <h1 style="color: black;">Encuéntrame en esta carta si sientes que no te amo</h1>
     <button onclick="mostrarMensaje1()">Si crees que no te amo, oprime este botón</button>
     <button onclick="mostrarMensaje2()">Si crees que te amo, oprime este botón</button>
     <div id="mensaje"></div>
